# stm32f407

./: Cargo.toml  README.md  STM32F407.patch  generate.sh  update-patch.sh
ci/: script.sh
